Feat: add get customer measure route
