# docs/swagger.yaml
@@ -1,4 +1,5 @@
 openapi: 3.0.0
+
 info:
   title: Medição de Consumo API
   description: API para gerenciar leituras de consumo de água e gás.
@@ -163,6 +164,14 @@ paths:
             type: string
             enum: [WATER, GAS]
           description: Filtra as medições por tipo (WATER ou GAS).
+        - in: query
+          name: measure_datetime
+          required: false
+          schema:
+            type: string
+            format: date
+            pattern: "^[0-9]{4}-[0-9]{2}-[0-9]{2}$"
+          description: Filtra as medições por data de medição.
       responses:
         '200':
           description: Operação realizada com sucesso.
